💄 Prevent zoom on mobile

--- a/src/client/styles/index.css
+++ b/src/client/styles/index.css
@@ -13,3 +13,8 @@
         scrollbar-width: none;  /* Firefox */
   }
 }
+
+/* prevent pinch zoom */
+html {
+    touch-action: none;
+}
